change bg color

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
-/* Color Pallet
+/* Color Pallet - http://www.flatuicolorpicker.com/
 
 #f03434 - Pomegranate
 #d64541 - Valencia
 #D65551 - softer Valencia
+#e4e9ed - Solitude
 */
 
 body {
-  background-color: white;
+  background-color: #e4e9ed;
 }
 
 
