[ui] edit email body to show local time

--- a/email-mailer/templates/alerts/html.hbs
+++ b/email-mailer/templates/alerts/html.hbs
@@ -11,7 +11,7 @@
         <h4>{{dateDivider}}</h4>
       {{else}}
         <p>
-          <span>{{dateTime}}</span>
+          <span>{{localTime}}</span>
           <span>{{player1.name}}</span>
           <span>vs</span>
           <span>{{player2.name}}</span>
