--- a/email-mailer/templates/alerts/html.hbs
+++ b/email-mailer/templates/alerts/html.hbs
@@ -6,18 +6,20 @@
   </style>
   </head>
   <body>
+    <h2>Here are your daily updates for {{tournamentName}} round: {{round}}</h2>
     {{#each matches}}
       {{#if dateDivider}}
         <h4>{{dateDivider}}</h4>
       {{else}}
         <p>
-          <span>{{dateTime}}</span>
+          <span>{{localTime}}</span>
           <span>{{player1.name}}</span>
           <span>vs</span>
           <span>{{player2.name}}</span>
-          <span>{{matchType}}</span>
         </p>
       {{/if}}
     {{/each}}
+    <br />
+    <p>your timezone is {{timeZoneLocationString}}</p>
   </body>
 </html>
