change theme font to Open Sans

--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,8 @@
 */
 
 body {
-  /* background-color: #e4e9ed; */
-  background-color: white;
+  background-color: #00c853;  /* green A7 */
 }
-
-
 
 .App {
   text-align: center;
